--- a/A2_L1/app/src/main/res/menu/list.xml
+++ b/A2_L1/app/src/main/res/menu/list.xml
@@ -2,8 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_add"
+        android:icon="@android:drawable/ic_menu_add"
+        android:orderInCategory="1"
+        android:title="@string/action_add"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:orderInCategory="2"
+        android:title="@string/more_actions">
+
+        <menu>
+            <item
+                android:id="@+id/action_delete_all"
+                android:title="@string/action_delete_all" />
+        </menu>
+    </item>
 </menu>
