--- a/A2_L1/app/src/main/res/menu/list.xml
+++ b/A2_L1/app/src/main/res/menu/list.xml
@@ -9,13 +9,12 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/action_do_nothing"
         android:orderInCategory="2"
-        android:title="@string/more_actions">
+        android:title="@string/do_nothing" />
 
-        <menu>
-            <item
-                android:id="@+id/action_delete_all"
-                android:title="@string/action_delete_all" />
-        </menu>
-    </item>
+    <item
+        android:id="@+id/action_delete_all"
+        android:orderInCategory="3"
+        android:title="@string/action_delete_all" />
 </menu>
