--- a/A2_L1/app/src/main/res/values/dimens.xml
+++ b/A2_L1/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="dimen_40dp">40dp</dimen>
+    <dimen name="dimen_16dp">16dp</dimen>
+    <dimen name="text_dimen_16sp">16sp</dimen>
+    <dimen name="dimen_32sp">32sp</dimen>
 </resources>
