--- a/A2_L1/app/src/main/res/menu/list_full_view_item.xml
+++ b/A2_L1/app/src/main/res/menu/list_full_view_item.xml
@@ -4,6 +4,12 @@
     <item
         android:id="@+id/action_delete_note"
         android:icon="@android:drawable/ic_menu_delete"
+        android:orderInCategory="1"
         android:title="@string/action_delete"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_edit_note"
+        android:icon="@android:drawable/ic_menu_edit"
+        android:title="@string/edit"
         app:showAsAction="ifRoom" />
 </menu>
