--- a/A2_L1/app/src/main/res/layout/app_bar_list.xml
+++ b/A2_L1/app/src/main/res/layout/app_bar_list.xml
@@ -24,10 +24,9 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
+        style="@style/my_fab_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/ic_add_black_24dp"
         tools:ignore="VectorDrawableCompat" />
 
