--- a/A2_L1/app/src/main/res/menu/list_full_view_item.xml
+++ b/A2_L1/app/src/main/res/menu/list_full_view_item.xml
@@ -9,7 +9,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_edit_note"
-        android:icon="@android:drawable/ic_menu_edit"
+        android:icon="@drawable/ic_check_black_24dp"
         android:title="@string/edit"
         app:showAsAction="ifRoom" />
 </menu>
