--- a/A2_L1/app/src/main/res/layout/content_list.xml
+++ b/A2_L1/app/src/main/res/layout/content_list.xml
@@ -13,4 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id="@+id/content_list_view_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/notebook_is_not_empty"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textStyle="bold" />
+
 </android.support.constraint.ConstraintLayout>
