--- a/A2_L1/app/src/main/res/layout/content_list.xml
+++ b/A2_L1/app/src/main/res/layout/content_list.xml
@@ -8,15 +8,29 @@
     tools:context="com.falin.valentin.a2_l1.ListActivity"
     tools:showIn="@layout/app_bar_list">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_40dp">
+
+        <TextView
+            android:id="@+id/content_degrees_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorAccent"
+            android:gravity="center" />
+    </LinearLayout>
+
     <ListView
         android:id="@+id/content_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dimen_40dp" />
 
     <TextView
         android:id="@+id/content_list_view_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dimen_40dp"
         android:gravity="center"
         android:text="@string/notebook_is_not_empty"
         android:textAppearance="@android:style/TextAppearance.Medium"
