--- a/A2_L1/app/src/main/res/menu/list.xml
+++ b/A2_L1/app/src/main/res/menu/list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
+    <!--<item
         android:id="@+id/action_add"
         android:icon="@android:drawable/ic_menu_add"
         android:orderInCategory="1"
@@ -11,10 +11,11 @@
     <item
         android:id="@+id/action_do_nothing"
         android:orderInCategory="2"
-        android:title="@string/do_nothing" />
+        android:title="@string/do_nothing" /> -->
 
     <item
         android:id="@+id/action_delete_all"
-        android:orderInCategory="3"
-        android:title="@string/action_delete_all" />
+        android:orderInCategory="1"
+        android:title="@string/action_delete_all"
+        app:showAsAction="ifRoom" />
 </menu>
