--- a/A2_L1/app/src/main/res/layout/content_list.xml
+++ b/A2_L1/app/src/main/res/layout/content_list.xml
@@ -14,26 +14,15 @@
         android:background="@color/colorAccent"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/content_city_edit_text"
+        <TextView
+            android:id="@+id/content_city_text_view"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/dimen_16dp"
             android:layout_marginStart="@dimen/dimen_16dp"
             android:layout_weight="1"
-            android:hint="@string/enter_your_city"
-            android:inputType="text" />
-
-        <ImageButton
-            android:id="@+id/content_check_city_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/dimen_16dp"
-            android:layout_marginStart="@dimen/dimen_16dp"
-            android:background="@color/colorAccent"
-            android:contentDescription="@string/checkbutton"
-            android:src="@drawable/ic_check_black_24dp" />
+            android:gravity="center_vertical"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/content_degrees_text_view"
