--- a/A2_L1/app/src/main/res/menu/list.xml
+++ b/A2_L1/app/src/main/res/menu/list.xml
@@ -14,7 +14,7 @@
         android:title="@string/do_nothing" /> -->
 
     <item
-        android:id="@+id/action_delete_all"
+        android:id="@+id/action_delete_all_data"
         android:orderInCategory="1"
         android:title="@string/action_delete_all"
         app:showAsAction="ifRoom" />
