--- a/A2_L1/app/src/main/res/values/black_bold_text.xml
+++ b/A2_L1/app/src/main/res/values/black_bold_text.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="RedBoldText" parent="@android:style/TextAppearance.DeviceDefault.Large">
-        <item name="android:textColor">#ff0703</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
