--- a/A2_L1/app/src/main/res/values/dimens.xml
+++ b/A2_L1/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="dimen_16dp">16dp</dimen>
     <dimen name="text_dimen_16sp">16sp</dimen>
     <dimen name="dimen_32sp">32sp</dimen>
+    <dimen name="dimen_60dp">60dp</dimen>
+    <dimen name="dimen_8dp">8dp</dimen>
 </resources>
