--- a/A2_L1/app/src/main/res/values/dimens.xml
+++ b/A2_L1/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="dimen_32sp">32sp</dimen>
     <dimen name="dimen_60dp">60dp</dimen>
     <dimen name="dimen_8dp">8dp</dimen>
+    <dimen name="dimen_50dp">50dp</dimen>
 </resources>
