--- a/A2_L1/app/src/main/res/layout-v21/note_detail_view.xml
+++ b/A2_L1/app/src/main/res/layout-v21/note_detail_view.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/dimen_16dp"
-    android:layout_marginRight="@dimen/dimen_16dp">
+    android:layout_marginRight="@dimen/dimen_16dp"
+    android:layout_marginTop="@dimen/dimen_4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +17,6 @@
             android:layout_width="@dimen/dimen_50dp"
             android:layout_height="@dimen/dimen_50dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
             android:background="@drawable/shape_oval"
             android:gravity="center"
@@ -29,7 +29,7 @@
             android:id="@+id/card_view_title_text"
             style="@style/TextAppearance.AppCompat.Headline"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@drawable/ripple"
