--- a/A2_L1/app/src/main/res/layout/content_list.xml
+++ b/A2_L1/app/src/main/res/layout/content_list.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_40dp"
         android:background="@color/colorAccent"
+        android:elevation="1dp"
         android:orientation="horizontal">
 
         <TextView
