--- a/A2_L1/app/src/main/res/layout/content_list_full_view_item.xml
+++ b/A2_L1/app/src/main/res/layout/content_list_full_view_item.xml
@@ -22,7 +22,9 @@
             style="@style/RedBoldText"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:inputType="text"
+            android:hint="@string/note_title"/>
 
         <EditText
             android:id="@+id/item_text"
@@ -30,7 +32,9 @@
             android:layout_height="0dp"
             android:layout_gravity="top"
             android:layout_weight="4"
-            android:textSize="@dimen/text_dimen_16sp" />
+            android:textSize="@dimen/text_dimen_16sp"
+            android:inputType="text"
+            android:hint="@string/note_text"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
