--- a/A2_L1/app/src/main/res/values/dimens.xml
+++ b/A2_L1/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="dimen_60dp">60dp</dimen>
     <dimen name="dimen_8dp">8dp</dimen>
     <dimen name="dimen_50dp">50dp</dimen>
+    <dimen name="dimen_4dp">4dp</dimen>
 </resources>
