Mass update views for matherial gesign

--- a/A2_L1/app/src/main/res/layout/content_list_full_view_item.xml
+++ b/A2_L1/app/src/main/res/layout/content_list_full_view_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:background="@color/colorAccentLower"
     tools:context="com.falin.valentin.a2_l1.ListFullViewItemActivity"
     tools:showIn="@layout/app_bar_list_full_view_item">
 
