--- a/A2_L1/app/src/main/res/layout-v21/note_detail_view.xml
+++ b/A2_L1/app/src/main/res/layout-v21/note_detail_view.xml
@@ -2,27 +2,30 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="@dimen/dimen_16dp"
     android:layout_marginRight="@dimen/dimen_16dp"
-    android:layout_marginTop="@dimen/dimen_4dp">
+    android:layout_marginTop="@dimen/dimen_8dp"
+    app:cardElevation="6dp"
+    app:cardCornerRadius="@dimen/dimen_4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_60dp"
+        android:layout_height="@dimen/dimen_50dp"
         android:background="@android:color/white"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/card_view_first_letter_text"
-            android:layout_width="@dimen/dimen_50dp"
-            android:layout_height="@dimen/dimen_50dp"
+            android:layout_width="@dimen/dimen_40dp"
+            android:layout_height="@dimen/dimen_40dp"
             android:layout_gravity="center"
             android:layout_marginStart="5dp"
             android:background="@drawable/shape_oval"
             android:gravity="center"
             android:hint="@string/d"
             android:textColor="@android:color/black"
-            android:textSize="36sp"
+            style="@style/TextAppearance.AppCompat.Headline"
             android:textStyle="bold" />
 
         <TextView
