--- a/A2_L1/app/src/main/res/layout/app_bar_list.xml
+++ b/A2_L1/app/src/main/res/layout/app_bar_list.xml
@@ -27,6 +27,7 @@
         style="@style/my_fab_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:elevation="@dimen/dimen_8dp"
         app:srcCompat="@drawable/ic_add_black_24dp"
         tools:ignore="VectorDrawableCompat" />
 
