--- a/A2_L1/app/src/main/res/layout/content_list.xml
+++ b/A2_L1/app/src/main/res/layout/content_list.xml
@@ -11,38 +11,52 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_40dp"
-        android:background="@color/colorAccent"
-        android:elevation="1dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/content_city_text_view"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/dimen_16dp"
-            android:layout_marginStart="@dimen/dimen_16dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/content_degrees_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/dimen_16dp"
-            android:layout_marginLeft="@dimen/dimen_16dp"
-            android:layout_marginRight="@dimen/dimen_16dp"
-            android:layout_marginStart="@dimen/dimen_16dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
             android:background="@color/colorAccent"
-            android:gravity="center"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/content_city_text_view"
+                style="@style/TextAppearance.AppCompat.Medium"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dimen_16dp"
+                android:layout_marginStart="@dimen/dimen_16dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:hint="@string/about_developer"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/content_degrees_text_view"
+                style="@style/TextAppearance.AppCompat.Medium"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/dimen_16dp"
+                android:layout_marginLeft="@dimen/dimen_16dp"
+                android:layout_marginRight="@dimen/dimen_16dp"
+                android:layout_marginStart="@dimen/dimen_16dp"
+                android:background="@color/colorAccent"
+                android:gravity="center"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:background="@drawable/shadow_test" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/content_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/dimen_40dp" />
+        android:layout_marginTop="@dimen/dimen_40dp"
+        android:background="@color/colorAccentLower" />
 
     <TextView
         android:id="@+id/content_list_view_text"
