--- a/A2_L1/app/src/main/res/layout/note_detail_view.xml
+++ b/A2_L1/app/src/main/res/layout/note_detail_view.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/dimen_16dp"
-    android:layout_marginRight="@dimen/dimen_16dp">
+    android:layout_marginRight="@dimen/dimen_16dp"
+    app:cardCornerRadius="@dimen/dimen_4dp"
+    app:cardElevation="@dimen/dimen_4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_60dp"
+        android:layout_height="@dimen/dimen_50dp"
         android:background="@android:color/white"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/card_view_first_letter_text"
-            android:layout_width="@dimen/dimen_50dp"
-            android:layout_height="@dimen/dimen_50dp"
+            style="@style/TextAppearance.AppCompat.Headline"
+            android:layout_width="@dimen/dimen_40dp"
+            android:layout_height="@dimen/dimen_40dp"
             android:layout_gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
@@ -22,7 +26,6 @@
             android:gravity="center"
             android:hint="@string/d"
             android:textColor="@android:color/black"
-            android:textSize="36sp"
             android:textStyle="bold" />
 
         <TextView
