--- a/A2_L1/app/src/main/res/values/colors.xml
+++ b/A2_L1/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#c3d0fc</color>
+    <color name="colorAccent">#beccfc</color>
+    <color name="colorAccentLower">#e2e8fd</color>
 </resources>
