--- a/A2_L1/app/src/main/res/layout/content_list.xml
+++ b/A2_L1/app/src/main/res/layout/content_list.xml
@@ -28,7 +28,7 @@
                 android:layout_marginStart="@dimen/dimen_16dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:hint="@string/about_developer"
+                android:text="@string/your_location_not_defined"
                 android:textColor="@android:color/black" />
 
             <TextView
