Some update and bug fix

--- a/A2_L1/app/src/main/res/layout/note_detail_view.xml
+++ b/A2_L1/app/src/main/res/layout/note_detail_view.xml
@@ -34,10 +34,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/dimen_8dp"
+            android:layout_marginStart="@dimen/dimen_8dp"
             android:layout_weight="1"
             android:background="@drawable/ripple"
             android:gravity="center"
             android:hint="@string/title"
+            android:lines="1"
             android:textStyle="bold" />
 
         <ImageView
