--- a/A2_L1/app/src/main/res/layout-v21/note_detail_view.xml
+++ b/A2_L1/app/src/main/res/layout-v21/note_detail_view.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="@dimen/dimen_16dp"
     android:layout_marginRight="@dimen/dimen_16dp"
     android:layout_marginTop="@dimen/dimen_8dp"
-    app:cardElevation="6dp"
-    app:cardCornerRadius="@dimen/dimen_4dp">
+    app:cardCornerRadius="@dimen/dimen_4dp"
+    app:cardElevation="6dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,6 +17,7 @@
 
         <TextView
             android:id="@+id/card_view_first_letter_text"
+            style="@style/TextAppearance.AppCompat.Headline"
             android:layout_width="@dimen/dimen_40dp"
             android:layout_height="@dimen/dimen_40dp"
             android:layout_gravity="center"
@@ -25,7 +26,6 @@
             android:gravity="center"
             android:hint="@string/d"
             android:textColor="@android:color/black"
-            style="@style/TextAppearance.AppCompat.Headline"
             android:textStyle="bold" />
 
         <TextView
@@ -34,10 +34,12 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_marginStart="@dimen/dimen_8dp"
             android:layout_weight="1"
             android:background="@drawable/ripple"
             android:gravity="center"
             android:hint="@string/title"
+            android:lines="1"
             android:textStyle="bold" />
 
         <ImageView
