--- a/A2_L1/app/src/main/res/values/dimens.xml
+++ b/A2_L1/app/src/main/res/values/dimens.xml
@@ -13,4 +13,10 @@
     <dimen name="dimen_8dp">8dp</dimen>
     <dimen name="dimen_50dp">50dp</dimen>
     <dimen name="dimen_4dp">4dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
