--- a/A2_L1/app/src/main/res/layout/item_widget.xml
+++ b/A2_L1/app/src/main/res/layout/item_widget.xml
@@ -6,5 +6,7 @@
     <TextView
         android:id="@+id/item_widget_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/rectangle"
+        android:textColor="@android:color/black" />
 </LinearLayout>
